--- a/metaconfig.ini
+++ b/metaconfig.ini
@@ -15,7 +15,7 @@ overwrite_original_rules=true
 ; ==========================================================
 ; 节点清洗：剔除机场展示/说明/防失联/流量提示节点
 ; ==========================================================
-exclude=流量|套餐|到期|剩余|重置|官网|网站|最新网址|防失联|失联|官网地址|公告|通知|TG|Telegram|电报|群|频道|说明|使用说明|QQ群|客服|工单|订阅|Expire|Traffic|Reset|Remaining|Expire|Official|Website|Game|游戏|遊戲|倍率|專用
+exclude=500.00|流量|套餐|到期|剩余|重置|官网|网站|最新网址|防失联|失联|官网地址|公告|通知|TG|Telegram|电报|群|频道|说明|使用说明|QQ群|客服|工单|订阅|Expire|Traffic|Reset|Remaining|Expire|Official|Website|Game|游戏|遊戲|倍率|專用
 
 
 ; ==========================================================
@@ -177,11 +177,11 @@ custom_proxy_group=🐟 遵循规则`select`[]🐟 漏网之鱼
 ; 全节点（允许任何节点显示）
 custom_proxy_group=🧭 手动选择`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`https://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇭🇰 HK`url-test`(?i)(🇭🇰|香港|\\bHK\\b|hongkong)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇹🇼 TW`url-test`(?i)(🇹🇼|台湾|\\bTW\\b|taiwan|taipei|hinet)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇯🇵 JP`url-test`(?i)(🇯🇵|日本|\\bJP\\b|tokyo|osaka)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇸🇬 SG`url-test`(?i)(🇸🇬|新加坡|\\bSG\\b|singapore)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇺🇸 US`url-test`(?i)(🇺🇸|美国|\\bUS\\b|united states|los angeles|san jose|seattle|new york)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇭🇰 HK`url-test`(?i)(🇭🇰|🇭🇰香港|\\bHK\\b|hongkong|Hong Kong)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇹🇼 TW`url-test`(?i)(🇹🇼|🇨🇳|台湾|\\bTW\\b|taiwan|taipei|hinet)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 JP`url-test`(?i)(🇯🇵|🇯🇵|日本|\\bJP\\b|tokyo|osaka)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 SG`url-test`(?i)(🇸🇬|🇸🇬|新加坡|\\bSG\\b|singapore)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇺🇸 US`url-test`(?i)(🇺🇸|🇺🇸|美国|\\bUS\\b|united states|los angeles|san jose|seattle|new york)`http://www.gstatic.com/generate_204`300,,50
 ; 冷门节点池（排除 HK/JP/TW/US/SG）——selector 手动选择
 ; 说明：用负向匹配把五大区节点剔除，剩余即“冷门”
-custom_proxy_group=🧊 冷门节点`select`(?i)^(?!.*(🇭🇰|香港|\\bHK\\b|hong\\s*kong|🇯🇵|日本|\\bJP\\b|tokyo|osaka|🇹🇼|台湾|\\bTW\\b|taiwan|taipei|hinet|🇸🇬|新加坡|\\bSG\\b|singapore|🇺🇸|美国|\\bUS\\b|united\\s*states|los\\s*angeles|san\\s*jose|seattle|new\\s*york)).*
+custom_proxy_group=🧊 冷门节点`select`(?i)^(?!.*(🇭🇰|🇭🇰|香港|\\bHK\\b|hong\\s*kong|🇯🇵|日本|\\bJP\\b|tokyo|osaka|🇹🇼|台湾|\\bTW\\b|taiwan|taipei|hinet|🇸🇬|新加坡|\\bSG\\b|singapore|🇺🇸|美国|\\bUS\\b|united\\s*states|los\\s*angeles|san\\s*jose|seattle|new\\s*york)).*
