--- a/metaconfig.ini
+++ b/metaconfig.ini
@@ -35,14 +35,6 @@ ruleset=🟥 Adobe,[]GEOIP,adobe,no-resolve
 ruleset=DIRECT,[]GEOSITE,private
 ruleset=DIRECT,[]GEOIP,private,no-resolve
 
-; --- Aethersailor 直连补丁 ---
-ruleset=DIRECT,clash-domain:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Direct_Domain.yaml,28800
-ruleset=DIRECT,clash-classic:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Direct_Classical_IP.yaml,28800
-
-; --- Aethersailor 代理补丁（仅兜底用，不越权）---
-ruleset=🚀 手动选择,clash-domain:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Proxy_Domain.yaml,28800
-ruleset=🚀 手动选择,clash-classic:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Proxy_Classical_IP.yaml,28800
-
 ; --- 国内直连 ---
 ruleset=DIRECT,[]GEOSITE,cn
 ruleset=DIRECT,[]GEOIP,cn,no-resolve
@@ -91,12 +83,6 @@ ruleset=🟪 Bybit,[]GEOSITE,bybit
 ; ==========================================================
 
 ;------------请在上方区域内添加应用---------------
-; --- 社交 / 通讯 ---
-ruleset=📞 即时通讯,[]GEOSITE,category-communication
-ruleset=💬 社交媒体,[]GEOSITE,category-social-media-!cn
-; --- Google / Microsoft/cf（新增） ---
-ruleset=☁️ cloudflare,[]GEOSITE,cloudflare
-ruleset=☁️ cloudflare,[]GEOIP,cloudflare,no-resolve
 
 ruleset=🔎 Google,[]GEOSITE,google
 ruleset=🔎 Google,[]GEOIP,google,no-resolve
@@ -105,10 +91,7 @@ ruleset=🪟 Microsoft,[]GEOSITE,microsoft
 ruleset=🪟 Microsoft,[]GEOIP,microsoft,no-resolve
 
 ; --- GFW 兜底 ---
-ruleset=🚀 手动选择,[]GEOSITE,gfw
-
-; --- 非标端口 ---
-ruleset=🔀 非标端口,clash-classic:https://testingcf.jsdelivr.net/gh/Aethersailor/Custom_OpenClash_Rules@main/rule/Custom_Port_Direct.yaml,28800
+ruleset=🚀 GFW兜底,[]GEOSITE,gfw
 
 ; --- 最终兜底 ---
 ruleset=🐟 漏网之鱼,[]FINAL
@@ -119,19 +102,14 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;    说明：每个应用都加入「🧊 冷门节点」可选
 ; ==========================================================
 ;------------请在下方区域内添加应用---------------
-custom_proxy_group=📦 Notion`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]DIRECT`[]🌐 Default
 custom_proxy_group=🍎 Apple`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]DIRECT`[]🌐 Default
 custom_proxy_group=🤖 ChatGPT`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
 custom_proxy_group=🧠 AI`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
 custom_proxy_group=📨 Telegram`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
-custom_proxy_group=📞 即时通讯`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
-custom_proxy_group=💬 社交媒体`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
 
 custom_proxy_group=🎬 YouTube`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
 custom_proxy_group=🎥 Netflix`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
 
-custom_proxy_group=🎵 TikTok`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
-custom_proxy_group=📸 Instagram`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
 custom_proxy_group=🐦 X`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
 
 
@@ -144,9 +122,7 @@ custom_proxy_group=🟨 Binance`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP
 custom_proxy_group=🟪 Bybit`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]DIRECT`[]🌐 Default
 ;------------请在上方区域内添加---------------
 ; Adobe：允许一键禁止联网
-custom_proxy_group=🟥 Adobe`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]DIRECT`[]REJECT`[]🌐 Default
 custom_proxy_group=🔎 Google`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
-custom_proxy_group=☁️ cloudflare`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
 ; Microsoft：允许直连优先，同时也能选五区/冷门/Default
 custom_proxy_group=🪟 Microsoft`select`[]DIRECT`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
 
@@ -156,18 +132,17 @@ custom_proxy_group=🪟 Microsoft`select`[]DIRECT`[]🇭🇰 HK`[]🇹🇼 TW`[]
 ; ==========================================================
 
 ; 兜底“手动选择”（不越权应用，只用于 Default/漏网）
-custom_proxy_group=🚀 手动选择`select`[]♻️ 自动选择`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🧭 手动选择`[]DIRECT
+custom_proxy_group=🚀 GFW兜底`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🧭 手动选择`[]DIRECT
 
 ; Default 出口（同样允许冷门节点参与）
-custom_proxy_group=🌐 Default`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]♻️ 自动选择`[]🧭 手动选择`[]DIRECT
+custom_proxy_group=🌐 Default`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🧭 手动选择`[]DIRECT
 
-custom_proxy_group=🐟 漏网之鱼`select`[]🌐 Default`[]DIRECT`[]♻️ 自动选择`[]🧊 冷门节点`[]🧭 手动选择`[]🚀 手动选择
+custom_proxy_group=🐟 漏网之鱼`select`[]🌐 Default`[]DIRECT`[]🧊 冷门节点`[]🧭 手动选择`[]🚀 GFW兜底
 
 
 ; ==========================================================
 ; 4) 非标端口
 ; ==========================================================
-custom_proxy_group=🔀 非标端口`select`[]🐟 遵循规则`[]DIRECT
 custom_proxy_group=🐟 遵循规则`select`[]🐟 漏网之鱼
 
 
@@ -176,7 +151,6 @@ custom_proxy_group=🐟 遵循规则`select`[]🐟 漏网之鱼
 ; ==========================================================
 ; 全节点（允许任何节点显示）
 custom_proxy_group=🧭 手动选择`select`.*
-custom_proxy_group=♻️ 自动选择`url-test`.*`https://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇭🇰 HK`url-test`(?i)(🇭🇰|香港|\\bHK\\b|hongkong|Hong Kong)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇹🇼 TW`url-test`(?i)(🇹🇼|台湾|\\bTW\\b|taiwan|taipei|hinet)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇯🇵 JP`url-test`(?i)(🇯🇵|日本|\\bJP\\b|tokyo|osaka|Japan)`http://www.gstatic.com/generate_204`300,,50
@@ -184,4 +158,4 @@ custom_proxy_group=🇸🇬 SG`url-test`(?i)(🇸🇬|新加坡|\\bSG\\b|singapo
 custom_proxy_group=🇺🇸 US`url-test`(?i)(🇺🇸|美国|\\bUS\\b|united states|los angeles|san jose|seattle|new york)`http://www.gstatic.com/generate_204`300,,50
 ; 冷门节点池（排除 HK/JP/TW/US/SG）——selector 手动选择
 ; 说明：用负向匹配把五大区节点剔除，剩余即“冷门”
-custom_proxy_group=🧊 冷门节点`select`(?i)^(?!.*(🇭🇰|香港|\\bHK\\b|hong\\s*kong|Hong Kong|🇯🇵|日本|\\bJP\\b|tokyo|osaka|Japan|🇹🇼|台湾|\\bTW\\b|taiwan|taipei|hinet|🇸🇬|新加坡|\\bSG\\b|singapore|🇺🇸|美国|\\bUS\\b|united\\s*states|los\\s*angeles|san\\s*jose|seattle|new\\s*york)).*
+custom_proxy_group=🧊 冷门节点`select`(?i)^(?!.*(🇭🇰|香港|\\bHK\\b|hong\\s*kong|Hong Kong|🇯🇵|日本|\\bJP\\b|tokyo|osaka|Japan|🇹🇼|台湾|\\bTW\\b|taiwan|taipei|hinet|🇸🇬|新加坡|\\bSG\\b|singapore|🇺🇸|美国|\\bUS\\b|united\\s*states|los\\s*angeles|san\\s*jose|seattle|new\\s*york|Los Angeles|San Jose)).*
