--- a/metaconfig.ini
+++ b/metaconfig.ini
@@ -54,6 +54,7 @@ ruleset=📨 Telegram,[]GEOSITE,telegram
 ruleset=📨 Telegram,[]GEOIP,telegram,no-resolve
 
 ruleset=🤖 ChatGPT,[]GEOSITE,openai
+ruleset=🤖 Gemini,[]GEOSITE,google-gemini
 ruleset=🧠 AI,[]GEOSITE,category-ai-!cn
 
 ruleset=🍎 Apple,[]GEOSITE,apple
@@ -104,6 +105,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;------------请在下方区域内添加应用---------------
 custom_proxy_group=🍎 Apple`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]DIRECT`[]🌐 Default
 custom_proxy_group=🤖 ChatGPT`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
+custom_proxy_group=🤖 Gemini`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
 custom_proxy_group=🧠 AI`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
 custom_proxy_group=📨 Telegram`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
 
