feat:  调整国家选择为 fallback

--- a/metaconfig.ini
+++ b/metaconfig.ini
@@ -28,9 +28,6 @@ exclude=500.00|流量|套餐|到期|剩余|重置|官网|网站|最新网址|防
 ;adobe.io
 ;behance.net
 
-ruleset=🟥 Adobe,[]GEOSITE,adobe
-ruleset=🟥 Adobe,[]GEOIP,adobe,no-resolve
-
 ; --- 私网直连 ---
 ruleset=DIRECT,[]GEOSITE,private
 ruleset=DIRECT,[]GEOIP,private,no-resolve
@@ -47,9 +44,6 @@ ruleset=DIRECT,[]GEOSITE,category-public-tracker
 ;------------请在下方区域内添加应用---------------
 ; --- 核心应用 ---
 
-ruleset=📦 Notion,[]GEOSITE,Notion
-ruleset=📦 Notion,[]GEOIP,Notion,no-resolve
-
 ruleset=📨 Telegram,[]GEOSITE,telegram
 ruleset=📨 Telegram,[]GEOIP,telegram,no-resolve
 
@@ -63,9 +57,6 @@ ruleset=🎥 Netflix,[]GEOSITE,netflix
 ruleset=🎥 Netflix,[]GEOIP,netflix,no-resolve
 
 ; --- 海外主流应用补充 ---
-ruleset=🎵 TikTok,[]GEOSITE,tiktok
-ruleset=🎵 TikTok,[]GEOIP,tiktok,no-resolve
-ruleset=📸 Instagram,[]GEOSITE,instagram
 ruleset=🐦 X,[]GEOSITE,twitter
 
 ; --- 开发 / 工具 ---
@@ -103,7 +94,6 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;    说明：每个应用都加入「🧊 冷门节点」可选
 ; ==========================================================
 ;------------请在下方区域内添加应用---------------
-custom_proxy_group=🍎 Apple`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]DIRECT`[]🌐 Default
 custom_proxy_group=🤖 ChatGPT`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
 custom_proxy_group=🤖 Gemini`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
 custom_proxy_group=🧠 AI`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
@@ -127,6 +117,8 @@ custom_proxy_group=🟪 Bybit`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[
 custom_proxy_group=🔎 Google`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
 ; Microsoft：允许直连优先，同时也能选五区/冷门/Default
 custom_proxy_group=🪟 Microsoft`select`[]DIRECT`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]🌐 Default
+; Apple
+custom_proxy_group=🍎 Apple`select`[]🇭🇰 HK`[]🇹🇼 TW`[]🇯🇵 JP`[]🇸🇬 SG`[]🇺🇸 US`[]🧊 冷门节点`[]DIRECT`[]🌐 Default
 
 ; ==========================================================
 ; 3) Default / 漏网之鱼（唯一允许全节点）
@@ -153,11 +145,11 @@ custom_proxy_group=🐟 遵循规则`select`[]🐟 漏网之鱼
 ; ==========================================================
 ; 全节点（允许任何节点显示）
 custom_proxy_group=🧭 手动选择`select`.*
-custom_proxy_group=🇭🇰 HK`url-test`(?i)(🇭🇰|香港|\\bHK\\b|hongkong|Hong Kong)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇹🇼 TW`url-test`(?i)(🇹🇼|台湾|\\bTW\\b|taiwan|taipei|hinet)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇯🇵 JP`url-test`(?i)(🇯🇵|日本|\\bJP\\b|tokyo|osaka|Japan)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇸🇬 SG`url-test`(?i)(🇸🇬|新加坡|\\bSG\\b|singapore)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇺🇸 US`url-test`(?i)(🇺🇸|美国|\\bUS\\b|united states|los angeles|san jose|seattle|new york)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇭🇰 HK`fallback`(?i)(🇭🇰|香港|\\bHK\\b|hongkong|Hong Kong)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇹🇼 TW`fallback`(?i)(🇹🇼|台湾|\\bTW\\b|taiwan|taipei|hinet)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 JP`fallback`(?i)(🇯🇵|日本|\\bJP\\b|tokyo|osaka|Japan)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 SG`fallback`(?i)(🇸🇬|新加坡|\\bSG\\b|singapore)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇺🇸 US`fallback`(?i)(🇺🇸|美国|\\bUS\\b|united states|los angeles|san jose|seattle|new york)`http://www.gstatic.com/generate_204`300,,50
 ; 冷门节点池（排除 HK/JP/TW/US/SG）——selector 手动选择
 ; 说明：用负向匹配把五大区节点剔除，剩余即“冷门”
 custom_proxy_group=🧊 冷门节点`select`(?i)^(?!.*(🇭🇰|香港|\\bHK\\b|hong\\s*kong|Hong Kong|🇯🇵|日本|\\bJP\\b|tokyo|osaka|Japan|🇹🇼|台湾|\\bTW\\b|taiwan|taipei|hinet|🇸🇬|新加坡|\\bSG\\b|singapore|🇺🇸|美国|\\bUS\\b|united\\s*states|los\\s*angeles|san\\s*jose|seattle|new\\s*york|Los Angeles|San Jose)).*
