feat: 添加白名单

--- a/metaconfig.ini
+++ b/metaconfig.ini
@@ -28,6 +28,9 @@ ruleset=DIRECT,[]GEOIP,private,no-resolve
 ruleset=DIRECT,[]GEOSITE,cn
 ruleset=DIRECT,[]GEOIP,cn,no-resolve
 
+; --- 自定义直连白名单 ---
+ruleset=DIRECT,direct-whitelist.list
+
 ; --- 国内可用 / 下载 / BT ---
 ruleset=DIRECT,[]GEOSITE,google-cn
 ruleset=DIRECT,[]GEOSITE,category-games@cn
